--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </main>
 
     <footer class="bg-danger text-white text-center py-3">
-      <p>© 2023 Food Shop. All rights reserved.</p>
+      <p>© 2025 Food Shop. All rights reserved. ROBERTO BOY PAOS</p>
     </footer>
 
     <!-- Modal -->
